--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,24 @@
 /* ------------- Global styling */
 /* ========================================= */
 
+/* vv from example.txt vv 
+hsl(40, 50%, 60%) site background
+hsl(40, 100%, 85%) site foreground
+hsl(40, 100%, 35%) winner text
+hsl(0, 0%, 50%) nominee text 
+*/
+
 body {
-    max-width: 1100px;
+    max-width: 60em;
+    margin: auto;
+    background-color: hsl(40, 50%, 60%);
+    justify-content: center;
     display: flex;
     flex-direction: column;
+}
+
+main {
+    background-color: hsl(40, 100%, 85%);
 }
 
 /* temporary code to make image smaller */
@@ -15,7 +29,7 @@ main img { max-width: 300px }
 /**/
 /**/
 /* ========================================= */
-/* -------- header/main/footer styling */
+/* ------ header/main-content/footer styling */
 /* ========================================= */
 
 header, footer {
@@ -27,6 +41,7 @@ header, footer {
 #section-one, #section-two {
     display: flex;
     flex-direction: row;
+    border-top: solid 1px hsl(40, 50%, 60%);
+    border-bottom: solid 1px hsl(40, 50%, 60%);
 }
-
 
