style.css | flex-direction now changes to column at 800px wide
done with @media query

--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,8 @@ header, footer {
     border-bottom: solid 1px hsl(40, 50%, 60%);
 }
 
+@media screen and (max-width: 800px) {
+    #section-one, #section-two {
+        flex-direction: column;
+    }
+}
