--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,11 @@ footer {
     max-width: 25em;
 }
 
+#section-two h2 {
+    display: flex;
+    justify-content: center;
+}
+
 #section-two div {
     flex-basis: 35%;
 }
