--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ main {
 /* ------ header/main-content/footer styling */
 /* ========================================= */
 
+main header h1 {
+    font-weight: 550;
+}
+
 header,
 footer {
     margin-left: auto;
