--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ main {
 /* ========================================= */
 
 main header h1 {
-    font-weight: 550;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-weight: 500;
 }
 
 header,
@@ -34,61 +35,66 @@ footer {
     text-align: center;
 }
 
-#section-one,
-#section-two {
+main section {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     border-top: solid 1px hsl(40, 50%, 60%);
     border-bottom: solid 1px hsl(40, 50%, 60%);
+    
+    br {
+        display: block;
+        content: ""; /* to clear default height */
+        margin-top: 1em;
+    }
+    
+    img {
+        padding: 0.8em;
+        max-width: 25em;
+        /* so that image does not stretch as
+            text expands downward when window is 
+            resized */
+        max-height: 480px;
+    }
 }
 
-#section-one br {
-    display: block;
-    content: ""; /* to clear default height */
-    margin-top: 1em;
-}
 
-#section-one img {
-    padding: 0.8em;
-    max-width: 25em;
-    /* so that image does not stretch as
-        text expands downward when window is 
-        resized */
-    max-height: 480px;
-}
-
-#section-two h2 {
-    display: flex;
-    justify-content: center;
-}
-
-#section-two div {
-    flex-basis: 35%;
-}
-
-#section-two div:last-child {
-    flex-basis: 65%;
-}
-
-#section-two li {
-    list-style: square;
-    margin-bottom: 0.4em;
+#section-two {
+    h2 {
+        display: flex;
+        justify-content: center;
+    }
+    
+    div {
+        flex: 3.5;
+    }
+    
+    div:last-child {
+        flex: 6.5;
+    }
+    
+    li {
+        list-style: square;
+        margin-bottom: 0.4em;
+    }
 }
 
 /* changes flex to column when width gets 
     smaller than 800px*/
 @media screen and (max-width: 800px) {
 
-    #section-one,
-    #section-two {
+    main section {
         flex-direction: column;
     }
 
     /* centers image in column layout */
-    #section-one img {
+    section img {
         margin-left: auto;
         margin-right: auto;
     }
+}
+
+footer {
+    padding-bottom: 1.5em;
 }
 
